--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
 	<head>
 	    <meta charset="utf-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	    <title>wp-bbl-rct starter</title>
+	    <title>Jazz Dashboard</title>
 	</head>
 	<body>
 		<div id='app'></div>
